<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.finwin.urbanvikas.custmate.my_account.account.AccountViewmodel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6">

        <!--tools:context=".MyAccountActivity"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--<include layout="@layout/toolbar2"/>-->

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="88dp"
                        android:layout_marginTop="11.7dp"
                        android:background="@drawable/circle_white"
                        android:gravity="center_horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/linearLayout5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:gravity="center_horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_acc_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/name"
                                android:textColor="@color/black_txt"
                                android:textSize="15sp"
                                android:textStyle="normal"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_acc_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/accno"
                                android:textColor="@color/geryTxt"
                                android:textSize="11.7sp"
                                android:textStyle="normal"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tv_acc_name" />

                            <TextView
                                android:id="@+id/tv_acc_mob"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/mob"
                                android:textColor="@color/geryTxt"
                                android:textSize="11.7sp"
                                android:textStyle="normal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/tv_acc_no" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11.7dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/linear_change_acc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:src="@drawable/ic_wallet"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <customfonts.MyTextView_Roboto_Regular
                                android:id="@+id/myTextView_Roboto_Regular2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:fontFamily="sans-serif"
                                android:text="@string/change_acc"
                                android:textColor="@color/black_txt"
                                android:textSize="15sp"
                                android:textStyle="normal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView6"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Spinner
                                android:entries="@{viewModel.listAccountNumbers}"
                                android:gravity="center"
                                android:onItemSelected="@{(parent,view,position,id)->viewModel.onSelectedAccountNumber(parent,view,position,id)}"
                                android:selectedItemPosition="@={viewModel.selectedAccountNumber}"
                                android:spinnerMode="dropdown"
                                android:id="@+id/sp_acc_no"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"

                                android:textAlignment="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/myTextView_Roboto_Regular2"
                                app:layout_constraintTop_toTopOf="parent" />


                            <!--<customfonts.MyTextView_Roboto_Regular-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_marginLeft="41.3dp"-->
                            <!--android:fontFamily="sans-serif"-->
                            <!--android:text="@string/change_acc"-->
                            <!--android:textColor="@color/black_txt"-->
                            <!--android:textSize="15sp"-->
                            <!--android:textStyle="normal" />-->

                            <!--<customfonts.MyTextView_Roboto_Regular-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:fontFamily="sans-serif"-->
                            <!--android:paddingRight="16.7dp"-->
                            <!--android:text="@string/_1_500_20"-->
                            <!--android:textColor="@color/bg_blue"-->
                            <!--android:textSize="15sp"-->
                            <!--android:textStyle="normal" />-->
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ececec" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/linear_change_mpin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:src="@drawable/ic_lock"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <customfonts.MyTextView_Roboto_Regular
                                android:id="@+id/myTextView_Roboto_Regular3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:fontFamily="sans-serif"
                                android:text="@string/change_mpin"
                                android:textColor="@color/black_txt"
                                android:textSize="15sp"
                                android:textStyle="normal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/imageView8"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linear_signout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="11.7dp"
                        android:layout_marginBottom="65.7dp"
                        android:background="@color/white">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:src="@drawable/signout"
                            android:padding="3dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <customfonts.MyTextView_Roboto_Regular
                            android:id="@+id/myTextView_Roboto_Regular4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/sign_out"
                            android:textColor="@color/black_txt"
                            android:textSize="15sp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView9"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>
</layout>