<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.finwin.urbanvikas.custmate.home.transfer_main.TransferViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.finwin.urbanvikas.custmate.ActivityMain">

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ibtn_back"
                android:onClick="@{viewmodel::clickBack}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_black"
                android:orientation="horizontal"
                android:padding="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-40.7dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15.7sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_one"
            app:layout_constraintVertical_bias="0.32">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_rectangle_white"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:onClick="@{viewmodel::clickAddBeneficiary}"
                    android:id="@+id/btn_f_benfry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/background_gradient"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingTop="15.7dp"
                    android:paddingBottom="15.7dp"
                    android:scaleType="fitXY"
                    android:text="@string/neft_benf"
                    android:textColor="@color/bg_blue"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_f_neft"
                    tools:layout_conversion_absoluteHeight="51dp"
                    tools:layout_conversion_absoluteWidth="351dp" />

                <Button
                    android:onClick="@{viewmodel::clickNeftImps}"
                    android:id="@+id/btn_f_neft"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/background_gradient"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingTop="15.7dp"
                    android:paddingBottom="15.7dp"
                    android:scaleType="fitXY"
                    android:text="@string/neft_trns"
                    android:textColor="@color/bg_blue"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_f_trnsfr"
                    tools:layout_conversion_absoluteHeight="51dp"
                    tools:layout_conversion_absoluteWidth="351dp" />

                <Button
                    android:onClick="@{viewmodel::clickAccountTransfer}"
                    android:id="@+id/btn_f_trnsfr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/background_gradient"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingTop="15.7dp"
                    android:paddingBottom="15.7dp"
                    android:scaleType="fitXY"
                    android:text="@string/acc_trns"
                    android:textColor="@color/bg_blue"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="51dp"
                    tools:layout_conversion_absoluteWidth="351dp" />

                <Button
                    android:onClick="@{viewmodel::clickRecentTrasfers}"
                    android:id="@+id/btn_recent_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_gradient"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:text="View Recent transfers"
                    android:textColor="@color/bg_blue"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_f_benfry" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>